--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,12 @@ header, main, footer{
     padding: 1rem;
 }
 
+/* Styling for overskrift og navigasjon i header*/
 header{
     font-size: 1.5rem;
     font-weight: 600;
     grid-area: header;
+    
 }
 
 
@@ -29,6 +31,26 @@ header nav{
 header nav div{
     display: flex;
     gap: 1rem;
+    margin: 1rem 0 0 0;
+    padding: 0;
+    
+}
+
+header nav ul{
+    display: flex;
+    gap: 0.5rem;
+    list-style: none;
+}
+
+nav a{
+    text-decoration: none;
+    color: #000;
+    
+    display: inline-block;
+}
+
+#ham{
+    margin: 1rem 1rem 0 0;
 }
 
 #logo{
@@ -60,13 +82,36 @@ header nav div{
 .beige-btn{
     display: inline-block;
     padding: 1rem;
+    margin-bottom: 2rem;
     text-decoration: none;
     background-color: #D9D9D9;
     color: #000;
     border-radius: 50px;
-    font-weight: 400;
+    font-weight: 300;
 }
 
+.white-btn{
+    display: inline-block;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    background-color: #ffffff;
+    color: #000;
+    border-radius: 50px;
+    font-weight: 300;
+}
+
+.dark-beige-btn{
+    display: inline-block;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    background-color: #CCC6BA;
+    color: #000;
+    border: 2px solid #868686;
+    border-radius: 5px;
+    font-weight: 300;
+}
 
 
 main{
@@ -97,9 +142,46 @@ main section img{
 }
 
 
+.view-mode{
+    height: 50px;
+    margin-bottom: -1rem;
+}
+
+
 
 footer{
     grid-area: footer;
+
+
+}.default-flex{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.default-flex h2{
+    flex-basis: 100%;
+}
+
+.default-flex article{
+    flex-basis: 25%;
+    min-width: 250px;
+}
+
+.default-flex article img{
+    width: 100%;
+}
+
+.badge:after{
+    content:attr(value);
+    font-size:12px;
+    background: #fff;
+    border-radius:50%;
+    padding:3px;
+    position:relative;
+    left:-8px;
+    top:-10px;
+    opacity:0.9;
 }
 
 @media only screen and (min-width:600px){
