--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #CCC6BA;
-    min-width: 572px;
+    min-width: 585px;
 }
 
 
@@ -15,6 +15,9 @@ header, main, footer{
     padding: 1rem;
 }
 
+.front-page{
+    padding: 0;
+}
 
 /* Styling for overskrift og navigasjon i header*/
 header{
@@ -71,21 +74,43 @@ ul.navbar2{
     margin: 1rem 4rem 0 0;
 }
 
+#shopping-cart{
+    color: #000;
+}
 
+/*Styling for logoen*/
 #logo{
     text-decoration: none;
     color: #000;
     margin: 1rem;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: lighter;
     font-family: abhaya libre;
 }
 
-
+/*Styling for den svarte streken øverst*/
  hr.strek {
     border: 1px solid black;
     width: 100%;
 } 
+
+main h1{
+    text-decoration: underline;
+}
+
+
+/*Får å få søkefeltet til høyre*/
+section.search{
+    float: right;
+}
+
+/*Styling på filter knappene på produkt siden*/
+img.view-mode{
+    float: right;
+}
+
+
+
 
 
 .responsive{
@@ -109,7 +134,7 @@ ul.navbar2{
     text-decoration: none;
 }
 
-
+/*Styling for de beige knappene på hovedsiden*/
 .beige-btn{
     display: inline-block;
     padding: 1rem;
@@ -117,11 +142,13 @@ ul.navbar2{
     text-decoration: none;
     background-color: #D9D9D9;
     color: #000;
+    border: 2px solid #c1bfbf;
     border-radius: 50px;
     font-weight: 300;
+    width: 150px;
 }
 
-
+/*Styling for de hvite knappene på handlekurv siden*/
 .white-btn{
     display: inline-block;
     padding: 0.5rem;
@@ -131,9 +158,10 @@ ul.navbar2{
     color: #000;
     border-radius: 50px;
     font-weight: 300;
+    width: 100%;
 }
 
-
+/*Styling for den mørke beige knappen på handlekurv siden*/
 .dark-beige-btn{
     display: inline-block;
     padding: 0.5rem;
@@ -160,42 +188,36 @@ main section img{
 main section.left{
     float:left;
     padding: 0 15px 0 0;
+    width: 185px;
 }
 
 
 main section.left img{
-    width:170px;
+    width:185px;
 }
 
 
 main section.middle{
     float:left;
     padding: 0 15px 0 0;
+    width: 185px;
 }
 
 
 main section.middle img{
-    width:170px;
+    width:185px;
 }
 
 
 main section.right{
     float:left;
     padding: 0;
+    width: 185px;
 }
 
 
 main section.right img{
-    width:170px;
-}
-
-
-#main-campaign{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 1rem;
-    justify-content: space-around;
+    width:185px;
 }
 
 
@@ -232,6 +254,8 @@ footer{
 
 ul#social-icons{
     padding: 0;
+    margin: 0;
+    font-size: 30px;
 }
 
 
@@ -258,6 +282,32 @@ ul#social-icons{
 }
 
 
+.handlekurv-flex{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+.handlekurv-flex article{
+    flex-basis: 100%;
+    min-width: 250px;
+}
+
+
+.handlekurv-flex article img{
+    width: 30%;
+    float: left;
+    margin: 0 1rem 0 0;
+}
+
+
+article.text-handlekurv{
+    width: 30%;
+    float: left;
+}
+
+
 .badge:after{
     content:attr(value);
     font-size:12px;
@@ -271,10 +321,43 @@ ul#social-icons{
 }
 
 
-#betalingsmåter{
-    display: flex;
-    
+article.products{
+    background-color: #D9D9D9;
+    padding: 0.5rem;
+    margin: 0 0 1rem 0;
 }
+
+
+article.products-handlekurv{
+    background-color: #D9D9D9;
+    padding: 0.5rem;
+    margin: 0 0 1rem 0;
+    width: 599px;
+}
+
+/*Styling for betalingsboksen*/
+section.faktura{
+    background-color: #D9D9D9;
+}
+
+section.text-faktura{
+    padding: 1rem;
+}
+
+/*se på dette etterpå*/
+a.dark-beige-btn{
+    text-align: center;
+}
+
+.betalingsmaater-center{
+    text-align: center;
+}
+
+.betalingsmaater img{
+    width: 50px;
+}
+
+
 
 
 @media only screen and (min-width:600px){
